--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,22 +13,22 @@ steps:
 - task: Maven@3
   inputs:
     mavenPomFile: 'pom.xml'
-    mavenOptions: '-Xmx3072m'
-    javaHomeOption: 'JDKVersion'
-    jdkVersionOption: '1.8'
-    jdkArchitectureOption: 'x64'
     publishJUnitResults: true
     testResultsFiles: '**/surefire-reports/TEST-*.xml'
-    goals: 'package'
-
+    javaHomeOption: 'JDKVersion'
+    jdkVersionOption: '1.8'
+    mavenVersionOption: 'Default'
+    mavenOptions: '-Xmx3072m'
+    mavenAuthenticateFeed: false
+    effectivePomSkip: false
+    sonarQubeRunAnalysis: true
+    sqMavenPluginVersionChoice: 'latest'
 - task: SonarCloudPrepare@1
   inputs:
     SonarCloud: 'Sonar Cloud'
     organization: 'az1'
     scannerMode: 'MSBuild'
     projectKey: 'az1_azure-pipelines'
-- task: SonarCloudAnalyze@1
-
 - task: SonarCloudPublish@1
   inputs:
     pollingTimeoutSec: '300'
