--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,14 +21,15 @@ steps:
     mavenOptions: '-Xmx3072m'
     mavenAuthenticateFeed: false
     effectivePomSkip: false
-    sonarQubeRunAnalysis: true
-    sqMavenPluginVersionChoice: 'latest'
+
 - task: SonarCloudPrepare@1
   inputs:
     SonarCloud: 'Sonar Cloud'
     organization: 'az1'
     scannerMode: 'MSBuild'
     projectKey: 'az1_azure-pipelines'
+
+- task: SonarCloudAnalyze@1
 - task: SonarCloudPublish@1
   inputs:
     pollingTimeoutSec: '300'
