Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -28,6 +28,7 @@ steps:
     organization: 'az1'
     scannerMode: 'MSBuild'
     projectKey: 'az1_azure-pipelines'
+    projectName: 'Azure Pipeline'
 
 - task: SonarCloudAnalyze@1
 - task: SonarCloudPublish@1
